improved error and info print usability. Fix Sqlite_v2 name error

--- a/controller/cleanup.ipynb
+++ b/controller/cleanup.ipynb
@@ -11,15 +11,14 @@
     "import time\n",
     "from global_modules import GlobalOperations\n",
     "from datetime import datetime, timedelta\n",
+    "go = GlobalOperations()\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    print('Starting cleanup server')\n",
+    "    print(f'{go.datetime_now()} Starting cleanup server')\n",
     "    root_path = os.getcwd()\n",
     "    cache_path = os.path.join(root_path, 'cache')\n",
     "    captured_frames_path = os.path.join(cache_path, 'captured_frames')\n",
     "    os.makedirs(captured_frames_path, exist_ok=True)\n",
-    "    \n",
-    "    go = GlobalOperations()\n",
     "    \n",
     "    keep_records_for = 2 # day\n",
     "    date_threshold = (datetime.now() - timedelta(hours=24)).timestamp()\n",
@@ -36,11 +35,11 @@
     "                        captured_frames_list_path = os.path.join(captured_frames_label_path, captured_frames_fn)\n",
     "                        os.remove(captured_frames_list_path)\n",
     "\n",
-    "            print(f'Finish cleanup at {go.datetime_now()}')\n",
+    "            print(f'{go.datetime_now()} Cleanup finished.')\n",
     "            time.sleep(60*60) # 1 hour\n",
     "\n",
     "        except KeyboardInterrupt:\n",
-    "            print(f'Stopping cleanup server at {go.datetime_now()}')\n",
+    "            print(f'{go.datetime_now()} Cleanup server stopped.')\n",
     "            pass"
    ]
   },
