--- a/controller/movement_signal.ipynb
+++ b/controller/movement_signal.ipynb
@@ -20,8 +20,9 @@
     "import numpy as np\n",
     "import h5py\n",
     "import sys, getopt\n",
-    "from global_modules import Sqlite_v2\n",
+    "from global_modules import Sqlite_v2, GlobalOperations\n",
     "import sqlite3\n",
+    "go = GlobalOperations()\n",
     "\n",
     "def main(argv):\n",
     "    opts, args = getopt.getopt(argv, \"hl:\")\n",
@@ -32,14 +33,14 @@
     "        elif opt in ('-l'):\n",
     "            return arg\n",
     "        else:\n",
-    "            print('Please specify label parameter first')\n",
+    "            print(f'{go.datetime_now()} Please specify label parameter first')\n",
     "            sys.exit()\n",
     "            \n",
     "            \n",
     "if __name__ == '__main__':\n",
     "    \n",
     "    label = main(sys.argv[1:])\n",
-    "    print(f'Starting movement signal server at {label}')\n",
+    "    print(f'{go.datetime_now()} Starting movement signal server at {label}')\n",
     "    \n",
     "    # Old outer_fence value: [(21,21),0.001]\n",
     "    param_sw = {'outer_fence':[(35,35),0.25],\n",
@@ -120,7 +121,7 @@
     "                    img_blurred = cv2.GaussianBlur(img, param_sw[label][0],0)\n",
     "                except cv2.error as e:\n",
     "                    print(e)\n",
-    "                    print('Removing troubled files and continue...')\n",
+    "                    print(f'{go.datetime_now()} Removing troubled files and continue...')\n",
     "                    print(moving_avg_path)\n",
     "                    os.remove(moving_avg_path)\n",
     "                    continue\n",
@@ -148,7 +149,7 @@
     "                        sqlite.insert_value(readings_db_cols, readings_db_values, readings_db_dtypes)\n",
     "                        insert_in_progress = False\n",
     "                    except sqlite3.OperationalError as e:\n",
-    "                        print(f'movement_signal.py -l {label} Insertion error. Trying to reinitiate sqlite object. {e}')\n",
+    "                        print(f'{go.datetime_now()} movement_signal.py -l {label} Insertion error. Trying to reinitiate sqlite object. {e}')\n",
     "                        del sqlite\n",
     "                        sqlite = Sqlite_v2()\n",
     "                        sqlite.set_table(label)\n",
@@ -173,11 +174,11 @@
     "                        if os.path.isfile(average_value_todelete):\n",
     "                            os.remove(average_value_todelete)\n",
     "                            \n",
-    "            print(f\"movement_signal.py -l {label} is waiting for new data...\")\n",
+    "            print(f\"{go.datetime_now()} movement_signal.py -l {label} is waiting for new data...\")\n",
     "            time.sleep(2)\n",
     "    \n",
     "    except KeyboardInterrupt:\n",
-    "        print(f'Stopping movement signal server at {label}')\n",
+    "        print(f'{go.datetime_now()} Stopping movement signal server at {label}')\n",
     "        pass"
    ]
   },
