--- a/controller/movement_signal_alert.ipynb
+++ b/controller/movement_signal_alert.ipynb
@@ -12,6 +12,8 @@
     "import sys, getopt\n",
     "import time\n",
     "import psutil\n",
+    "from global_modules import GlobalOperations\n",
+    "go = GlobalOperations()\n",
     "\n",
     "def main(argv):\n",
     "    opts, args = getopt.getopt(argv, \"hl:\")\n",
@@ -22,12 +24,12 @@
     "        elif opt in ('-l'):\n",
     "            return arg\n",
     "        else:\n",
-    "            print('Please specify label parameter first')\n",
+    "            print(f'{go.datetime_now()} Please specify label parameter first')\n",
     "            sys.exit()\n",
     "            \n",
     "if __name__ == '__main__':\n",
     "    label = main(sys.argv[1:])\n",
-    "    print(f'movement_signal_alert.py -l \"{label}\" Starting movement signal alert server at {label}')\n",
+    "    print(f'{go.datetime_now()} movement_signal_alert.py -l \"{label}\" Starting movement signal alert server at {label}')\n",
     "    \n",
     "    try:\n",
     "        while True:\n",
@@ -41,7 +43,7 @@
     "            # Get last threshold\n",
     "            thresholds_list = os.listdir(thresholds_label_path)\n",
     "            if thresholds_list == []:\n",
-    "                print(f'movement_signal_alert.py -l \"{label}\" Waiting for threshold data...')\n",
+    "                print(f'{go.datetime_now()} movement_signal_alert.py -l \"{label}\" Waiting for threshold data...')\n",
     "                time.sleep(10)\n",
     "                continue\n",
     "            thl_float = [float(i.replace('.cache','')) for i in thresholds_list]\n",
@@ -56,10 +58,10 @@
     "                            threshold_still_reading = False\n",
     "                            break\n",
     "                    except ValueError:\n",
-    "                        print(f'movement_signal_alert.py -l \"{label}\" Threshold reading failed. Trying another threshold cache. Last path: {threshold_path}')\n",
+    "                        print(f'{go.datetime_now()} movement_signal_alert.py -l \"{label}\" Threshold reading failed. Trying another threshold cache. Last path: {threshold_path}')\n",
     "                        time.sleep(0.1)\n",
     "                if threshold_still_reading:\n",
-    "                    print(f'movement_signal_alert.py -l \"{label}\" All threshold reading attempt failed. Wating for more threshold data...')\n",
+    "                    print(f'{go.datetime_now()} movement_signal_alert.py -l \"{label}\" All threshold reading attempt failed. Wating for more threshold data...')\n",
     "                    time.sleep(10)\n",
     "                    continue\n",
     "\n",
@@ -86,7 +88,7 @@
     "                    with open(reading_path, 'r') as f:\n",
     "                        reading = int(f.read())\n",
     "                except ValueError:\n",
-    "                    print(f'movement_signal_alert.py -l \"{label}\" Value error. Assume 0 reading value.')\n",
+    "                    print(f'{go.datetime_now()} movement_signal_alert.py -l \"{label}\" Value error. Assume 0 reading value.')\n",
     "                    reading = 0\n",
     "                    with open(reading_path, 'w') as f:\n",
     "                        f.write(str(0))\n",
@@ -105,12 +107,12 @@
     "                try:\n",
     "                    os.remove(reading_path)\n",
     "                except PermissionError:\n",
-    "                    print(f'movement_signal_alert.py -l \"{label}\" Failed to remove {reading_path}')\n",
+    "                    print(f'{go.datetime_now()} movement_signal_alert.py -l \"{label}\" Failed to remove {reading_path}')\n",
     "                    pass\n",
     "                \n",
     "            time.sleep(0.5)\n",
     "    except KeyboardInterrupt:\n",
-    "        print(f'Stopping movement signal alert server at {label}')\n",
+    "        print(f'{go.datetime_now()} Stopping movement signal alert server at {label}')\n",
     "        pass\n",
     "        "
    ]
