--- a/controller/movement_signal_threshold_updater.ipynb
+++ b/controller/movement_signal_threshold_updater.ipynb
@@ -8,10 +8,11 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from global_modules import Sqlite\n",
+    "from global_modules import Sqlite, GlobalOperations\n",
     "import os\n",
     "import sys, getopt\n",
     "import time\n",
+    "go = GlobalOperations()\n",
     "\n",
     "def main(argv):\n",
     "    opts, args = getopt.getopt(argv, \"hl:\")\n",
@@ -22,7 +23,7 @@
     "        elif opt in ('-l'):\n",
     "            return arg\n",
     "        else:\n",
-    "            print('Please specify label parameter first')\n",
+    "            print(f'{go.datetime_now()} Please specify label parameter first')\n",
     "            sys.exit()\n",
     "            \n",
     "if __name__ == '__main__':\n",
@@ -78,11 +79,11 @@
     "                    if os.path.isfile(threshold_value_todelete):\n",
     "                        os.remove(threshold_value_todelete)\n",
     "\n",
-    "            print(f\"movement_signal_threshold_updater.py -l {label} is waiting for new data...\")\n",
+    "            print(f\"{go.datetime_now()} movement_signal_threshold_updater.py -l {label} is waiting for new data...\")\n",
     "            time.sleep(60)\n",
     "    \n",
     "    except KeyboardInterrupt:\n",
-    "        print(f'Stopping movement signal threshold server at {label}')\n",
+    "        print(f'{go.datetime_now()} Stopping movement signal threshold server at {label}')\n",
     "        pass"
    ]
   },
