--- a/controller/notifications.ipynb
+++ b/controller/notifications.ipynb
@@ -15,6 +15,7 @@
     "from html import escape\n",
     "import shutil\n",
     "import sys, getopt\n",
+    "go = GlobalOperations()\n",
     "\n",
     "def main(argv):\n",
     "    opts, args = getopt.getopt(argv, \"hl:\")\n",
@@ -25,12 +26,12 @@
     "        elif opt in ('-l'):\n",
     "            return arg\n",
     "        else:\n",
-    "            print('Please specify label parameter first at {label}')\n",
+    "            print(f'{go.datetime_now()} Please specify label parameter first at {label}')\n",
     "            sys.exit()\n",
     "            \n",
     "if __name__ == '__main__':   \n",
     "    label = main(sys.argv[1:])\n",
-    "    print(f'notifications.py -l \"{label}\" Starting notifications server.')\n",
+    "    print(f'{go.datetime_now()} notifications.py -l \"{label}\" Starting notifications server.')\n",
     "    try:\n",
     "        while True:\n",
     "            TOKEN = '2002016705:AAGcXBOdx_OAj5LSVxu1LAjVO_xIih8bdfA'\n",
@@ -71,7 +72,6 @@
     "            notifications_list_ff = [str(i) + '.cache' for i in nl_float]\n",
     "\n",
     "            for notification_fn in notifications_list_ff:\n",
-    "                go = GlobalOperations()\n",
     "                sha256 = go.gethash(str(random.random()))\n",
     "\n",
     "                notification_path = os.path.join(notifications_label_path, notification_fn)\n",
@@ -106,7 +106,7 @@
     "                            captured_frames_img.close()\n",
     "                            sent = True\n",
     "                        except requests.exceptions.RequestException as e:\n",
-    "                            print(f'notifications.py -l \"{label}\" {e} Trying to send notification. Wait for 5 seconds.')\n",
+    "                            print(f'{go.datetime_now()} notifications.py -l \"{label}\" {e} Trying to send notification. Wait for 5 seconds.')\n",
     "                            time.sleep(5)\n",
     "\n",
     "                # Store to proofing server\n",
@@ -129,7 +129,7 @@
     "                try:\n",
     "                    os.remove(captured_frames_img_path_cache)\n",
     "                except PermissionError:\n",
-    "                    print(f'notifications.py -l \"{label}\" Failed to remove {captured_frames_img_path_cache}')\n",
+    "                    print(f'{go.datetime_now()} notifications.py -l \"{label}\" Failed to remove {captured_frames_img_path_cache}')\n",
     "                os.remove(notification_path)\n",
     "\n",
     "        #         break\n",
@@ -138,7 +138,7 @@
     "            # break\n",
     "                        \n",
     "    except KeyboardInterrupt:\n",
-    "        print(f'notifications.py -l \"{label}\" Stopping notifications server')\n",
+    "        print(f'{go.datetime_now()} notifications.py -l \"{label}\" Stopping notifications server')\n",
     "        pass"
    ]
   },
