--- a/controller/proof.ipynb
+++ b/controller/proof.ipynb
@@ -10,9 +10,11 @@
     "import os\n",
     "import shutil\n",
     "import time\n",
+    "from global_modules import GlobalOperations\n",
+    "go = GlobalOperations()\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    print('Starting proof storing server')\n",
+    "    print(f'{go.datetime_now()} Starting proof storing server')\n",
     "    root_path = os.getcwd()\n",
     "    cache_path = os.path.join(root_path, 'cache')\n",
     "    proof_path = os.path.join(cache_path, 'proof')\n",
@@ -42,9 +44,9 @@
     "\n",
     "                    try:\n",
     "                        shutil.copy(captured_frames_img_path, cctv_proof_img_path)\n",
-    "                        print(f'Copying: {cctv_proof_img_path}')\n",
+    "                        print(f'{go.datetime_now()} Copying: {cctv_proof_img_path}')\n",
     "                    except FileNotFoundError:\n",
-    "                        print(f'Failed file not found: {cctv_proof_img_path}')\n",
+    "                        print(f'{go.datetime_now()} Failed file not found: {cctv_proof_img_path}')\n",
     "\n",
     "                    # Remove proof queue\n",
     "                    os.remove(proof_label_list_path)\n",
@@ -52,7 +54,7 @@
     "            \n",
     "            \n",
     "    except KeyboardInterrupt:\n",
-    "        print(f'Stopping proof storing server')\n",
+    "        print(f'{go.datetime_now()} Stopping proof storing server')\n",
     "        pass\n",
     "        \n",
     "        \n",
