--- a/controller/webcapture.ipynb
+++ b/controller/webcapture.ipynb
@@ -11,6 +11,7 @@
     "import time\n",
     "import sys, getopt\n",
     "from tqdm import trange\n",
+    "from global_modules import GlobalOpertions\n",
     "\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
@@ -21,6 +22,8 @@
     "from selenium.common.exceptions import TimeoutException\n",
     "from selenium.common.exceptions import ElementClickInterceptedException\n",
     "from selenium.common.exceptions import WebDriverException\n",
+    "\n",
+    "go = GlobalOperations()\n",
     "\n",
     "capture_interval = 1 #second(s)\n",
     "live_for = 240 #second(s), server lived for\n",
@@ -45,23 +48,23 @@
     "        elif opt in ('-u'):\n",
     "            return arg\n",
     "        else:\n",
-    "            print('Please specify urlhost parameter first')\n",
+    "            print(f'{go.datetime_now()} Please specify urlhost parameter first')\n",
     "            sys.exit()\n",
     "            \n",
     "\n",
     "# Serve forever\n",
     "if __name__ == \"__main__\":\n",
     "    urlhost = main(sys.argv[1:])\n",
-    "    print(f'Starting Hikvision capture server at {urlhost}')\n",
+    "    print(f'{go.datetime_now()} Starting Hikvision capture server at {urlhost}')\n",
     "    \n",
     "    try:\n",
-    "        print('Start new instance')\n",
+    "        print(f'{go.datetime_now()} Start new instance')\n",
     "        with webdriver.Firefox(service=service, options=options) as driver:\n",
     "\n",
     "            wait = WebDriverWait(driver, wait_timeout)\n",
     "            while True:\n",
     "                try:\n",
-    "                    print(f'Connecting to: http://{urlhost}/')\n",
+    "                    print(f'{go.datetime_now()} Connecting to: http://{urlhost}/')\n",
     "                    driver.get(f\"http://{urlhost}/\")\n",
     "\n",
     "                    # Relogin every start of capture session\n",
@@ -71,10 +74,10 @@
     "                        driver.find_element('id', 'username').send_keys('admin')\n",
     "                        driver.find_element('id', 'password').send_keys('Valerian@live1')\n",
     "                        driver.find_element('xpath', '/html/body/div[2]/table/tbody/tr/td[2]/div/div[5]/button').click()    \n",
-    "                        print(f'Login success at {urlhost}')\n",
+    "                        print(f'{go.datetime_now()} Login success at {urlhost}')\n",
     "\n",
     "                        # Capture button\n",
-    "                        print(f'Capturing frames at {urlhost}...')\n",
+    "                        print(f'{go.datetime_now()} Capturing frames at {urlhost}...')\n",
     "                        wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[4]/div[2]/div/div[2]/span/button[3]')))\n",
     "                        for _ in trange(capture_per_session):\n",
     "                            wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[4]/div[2]/div/div[2]/span/button[3]')))\n",
@@ -88,9 +91,9 @@
     "                        # Popup confirmation\n",
     "                        wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[1]/div/table/tbody/tr[2]/td[2]/div/table/tbody/tr[3]/td/div/button[1]')))\n",
     "                        driver.find_element('xpath', '/html/body/div[1]/div/table/tbody/tr[2]/td[2]/div/table/tbody/tr[3]/td/div/button[1]').click()\n",
-    "                        print('End of capture session. Reloggin...')\n",
+    "                        print(f'{go.datetime_now()} End of capture session. Reloggin...')\n",
     "                except TimeoutException:\n",
-    "                    print(f'webcapture.py -u \"{urlhost}\" Request timeout. Wait for {wait_timeout}s.')\n",
+    "                    print(f'{go.datetime_now()} webcapture.py -u \"{urlhost}\" Request timeout. Wait for {wait_timeout}s.')\n",
     "                    time.sleep(wait_timeout)\n",
     "                except (ElementClickInterceptedException, WebDriverException):\n",
     "                    # WebDriverException:\n",
@@ -101,10 +104,10 @@
     "                    #   because another element <div id=\"plugin\" \n",
     "                    #   class=\"layout-center-inner ui-layout-pane ui-layout-pane-center ng-scope\"> \n",
     "                    #   obscures it\n",
-    "                    print(f'webcapture.py -u \"{urlhost}\" ElementClickInterceptedException or WebDriverException. Wait for {wait_timeout}s and retrying from login page.')\n",
+    "                    print(f'{go.datetime_now()} webcapture.py -u \"{urlhost}\" ElementClickInterceptedException or WebDriverException. Wait for {wait_timeout}s and retrying from login page.')\n",
     "\n",
     "    except KeyboardInterrupt:\n",
-    "        print(f'Stopping Hikvision capture server at {urlhost}')\n",
+    "        print(f'{go.datetime_now()} Stopping Hikvision capture server at {urlhost}')\n",
     "        pass\n"
    ]
   },
