--- a/controller/capture_restructurer.ipynb
+++ b/controller/capture_restructurer.ipynb
@@ -21,6 +21,8 @@
     "import shutil\n",
     "from datetime import datetime\n",
     "import time\n",
+    "from global_modules import GlobalOperations\n",
+    "go = GlobalOperations()\n",
     "\n",
     "origin_root = os.path.join(f'C:\\\\Users\\\\{os.getlogin()}\\\\Web\\\\CaptureFiles')\n",
     "print(f'Listening at: {origin_root}')\n",
@@ -60,13 +62,13 @@
     "            \n",
     "if __name__ == '__main__':\n",
     "    try:\n",
-    "        print(f'capture_restructurer server started at {datetime.now()}')\n",
+    "        print(f'{go.datetime_now()} capture_restructurer server is started')\n",
     "        # Run infinite times.\n",
     "        while True:\n",
     "            main(origin_root, captured_frames_path)\n",
     "            time.sleep(0.5)\n",
     "    except KeyboardInterrupt:\n",
-    "        print('Stopping capture_restructurer server. Thank you!')\n"
+    "        print(f'{go.datetime_now()} Stopping capture_restructurer server. Thank you!')\n"
    ]
   },
   {
