--- a/controller/telegram_get_updates.ipynb
+++ b/controller/telegram_get_updates.ipynb
@@ -455,8 +455,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "173b26fa-030d-4a82-b530-4cb04cabba59",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_3792/712552780.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'a' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "isinstance(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a89b3522-6516-4df4-9dd2-8600e86d3b09",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'a' in vars() or 'a' in globals()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6cd97a3f-6eec-4800-baae-1dd64b079102",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from global_modules import Sqlite_v2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7da6840e-750b-49aa-9870-c9478ef4338e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sqlite = Sqlite_v2()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ae3a5736-8be7-4503-8cff-4982644fb16c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sqlite.conn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0fb1f102-ade6-4ae7-9fbf-0c2be486534f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-01-15 10:05:53.812561+07:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sqlite.datetime_now())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b85c1f5b-0574-4bb1-8e62-b59ea473d991",
    "metadata": {},
    "outputs": [],
    "source": []
