--- a/controller/webcapture.ipynb
+++ b/controller/webcapture.ipynb
@@ -11,7 +11,7 @@
     "import time\n",
     "import sys, getopt\n",
     "from tqdm import trange\n",
-    "from global_modules import GlobalOpertions\n",
+    "from global_modules import GlobalOperations\n",
     "\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
