change long sleep approach to avoid long keyboard interrupt

--- a/controller/cleanup.ipynb
+++ b/controller/cleanup.ipynb
@@ -36,7 +36,9 @@
     "                        os.remove(captured_frames_list_path)\n",
     "\n",
     "            print(f'{go.datetime_now()} Cleanup finished.')\n",
-    "            time.sleep(60*60) # 1 hour\n",
+    "            for _ in range(60*60):\n",
+    "                # 1 hour\n",
+    "                time.sleep(1) \n",
     "\n",
     "        except KeyboardInterrupt:\n",
     "            print(f'{go.datetime_now()} Cleanup server stopped.')\n",
