fix failed to cleanup newer file(s). Add unit to storage info

--- a/controller/cleanup.ipynb
+++ b/controller/cleanup.ipynb
@@ -21,10 +21,12 @@
     "    os.makedirs(captured_frames_path, exist_ok=True)\n",
     "    \n",
     "    keep_records_for = 2 # day\n",
-    "    date_threshold = (datetime.now() - timedelta(hours=24)).timestamp()\n",
     "\n",
     "    try:\n",
     "        while True:\n",
+    "            cleanup_counter = 0\n",
+    "            beginning_storage = go.free_storage(root_path)\n",
+    "            date_threshold = (datetime.now() - timedelta(hours=24)).timestamp()\n",
     "            captured_frames_labels = os.listdir(captured_frames_path)\n",
     "            for label in captured_frames_labels:\n",
     "                captured_frames_label_path = os.path.join(captured_frames_path, label)\n",
@@ -34,8 +36,10 @@
     "                    if float(captured_frames_fn.replace('.jpg','')) < date_threshold:\n",
     "                        captured_frames_list_path = os.path.join(captured_frames_label_path, captured_frames_fn)\n",
     "                        os.remove(captured_frames_list_path)\n",
+    "                        cleanup_counter += 1\n",
     "\n",
-    "            print(f'{go.datetime_now()} Cleanup finished.')\n",
+    "            ending_storage = go.free_storage(root_path)\n",
+    "            print(f'{go.datetime_now()} Cleanup finished. {cleanup_counter} records cleaned ({ending_storage - beginning_storage}GB). Free storage now: {ending_storage}GB.')\n",
     "            for _ in range(60*60):\n",
     "                # 1 hour\n",
     "                time.sleep(1) \n",
