--- a/controller/movement_signal_alert.ipynb
+++ b/controller/movement_signal_alert.ipynb
@@ -98,7 +98,7 @@
     "                    data_time = datetime.fromtimestamp(float(reading_fn.replace('.cache','')))\n",
     "                    data_time = data_time.strftime('%H:%M:%S')\n",
     "                    storage = psutil.disk_usage(root_path)\n",
-    "                    content = f'''{data_time} {label} val:{reading} threshold:{int(threshold)} free_storage:{int(storage.free / (2**30))}'''\n",
+    "                    content = f'''{data_time} {label} val:{reading} threshold:{int(threshold)} free_storage:{int(storage.free / (2**30))}GB'''\n",
     "                    print(content)\n",
     "                    with open(notifications_path, 'w') as f:\n",
     "                        f.write(content)\n",
