sync the codebase to the latest production version node

--- a/proof.ipynb
+++ b/proof.ipynb
@@ -55,10 +55,7 @@
     "            \n",
     "    except KeyboardInterrupt:\n",
     "        print(f'{go.datetime_now()} Stopping proof storing server')\n",
-    "        pass\n",
-    "        \n",
-    "        \n",
-    "        "
+    "        pass"
    ]
   },
   {
@@ -162,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
