--- a/webcapture.ipynb
+++ b/webcapture.ipynb
@@ -108,7 +108,7 @@
     "\n",
     "    except KeyboardInterrupt:\n",
     "        print(f'{go.datetime_now()} Stopping Hikvision capture server at {urlhost}')\n",
-    "        pass\n"
+    "        pass"
    ]
   },
   {
