--- a/capture_restructurer.ipynb
+++ b/capture_restructurer.ipynb
@@ -68,7 +68,7 @@
     "            main(origin_root, captured_frames_path)\n",
     "            time.sleep(0.1)\n",
     "    except KeyboardInterrupt:\n",
-    "        print(f'{go.datetime_now()} Stopping capture_restructurer server. Thank you!')\n"
+    "        print(f'{go.datetime_now()} Stopping capture_restructurer server. Thank you!')"
    ]
   },
   {
@@ -96,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
