--- a/movement_signal_alert.ipynb
+++ b/movement_signal_alert.ipynb
@@ -113,17 +113,8 @@
     "            time.sleep(0.1)\n",
     "    except KeyboardInterrupt:\n",
     "        print(f'{go.datetime_now()} Stopping movement signal alert server at {label}')\n",
-    "        pass\n",
-    "        "
+    "        pass"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3d99f423-e74b-4704-aeb4-8fd9054dea5f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -142,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
