initialize and implementing .env for variables

--- a/capture.ipynb
+++ b/capture.ipynb
@@ -27,7 +27,18 @@
     "import random\n",
     "import time\n",
     "import pandas as pd\n",
-    "from global_modules import VibrateProcessor"
+    "from global_modules import VibrateProcessor, GlobalOperations\n",
+    "\n",
+    "go = GlobalOperations()\n",
+    "\n",
+    "CG_UNAME = go.config['CCTV_GLOBAL_USERNAME_URLENCODED']\n",
+    "CG_PASS = go.config['CCTV_GLOBAL_PASSWORD_URLENCODED']\n",
+    "C1_IP = go.config['CCTV_1_IP']\n",
+    "C1_N = go.config['CCTV_1_NAME']\n",
+    "C2_IP = go.config['CCTV_2_IP']\n",
+    "C2_N = go.config['CCTV_2_NAME']\n",
+    "C3_IP = go.config['CCTV_3_IP']\n",
+    "C3_N = go.config['CCTV_3_NAME']"
    ]
   },
   {
@@ -37,9 +48,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "streams = {'outer_fence':{'stream_rtsp':'rtsp://admin:Valerian%40live1@192.168.0.170:554/Streaming/Channels/102/','player_obj':0},\n",
-    "           'garden':{'stream_rtsp':'rtsp://admin:Valerian%40live1@192.168.0.208:554/Streaming/Channels/102/','player_obj':0},\n",
-    "           'hallway':{'stream_rtsp':'rtsp://admin:Valerian%40live1@192.168.0.207:554/Streaming/Channels/102/','player_obj':0}}\n",
+    "streams = {C1_N:{'stream_rtsp':f\"rtsp://{CGUNAME}:{CGPASS}@{C1_IP}:554/Streaming/Channels/102/\",'player_obj':0},\n",
+    "           C2_N:{'stream_rtsp':f\"rtsp://{CGUNAME}:{CGPASS}@{C2_IP}:554/Streaming/Channels/102/\",'player_obj':0},\n",
+    "           C3_N:{'stream_rtsp':f\"rtsp://{CGUNAME}:{CGPASS}@{C3_IP}:554/Streaming/Channels/102/\",'player_obj':0}}\n",
     "\n",
     "# UPGRADE OPTIONS: Ping before connecting\n",
     "# Common problems: no video showed up if no admin connection to live view\n",
@@ -138,7 +149,7 @@
     "# Initiate directory, database\n",
     "root_dir = os.getcwd()\n",
     "db_dir = os.path.join(root_dir, 'db')\n",
-    "events_db = 'events.db'\n",
+    "events_db = go.config['CAPTURE_EVENTS_DB']\n",
     "events_db_path = os.path.join(db_dir, events_db)\n",
     "events_table = 'events'\n",
     "\n",
@@ -177,7 +188,7 @@
     "# Use records.db to create capture_status_api status\n",
     "# Read one_hallway, one_main, one_perimeter, two_corner, two_entry in the same time\n",
     "vp = VibrateProcessor()\n",
-    "records_db = 'records.db'\n",
+    "records_db = go.config['VIBRATION_RECORDS_DB']\n",
     "records_db_path = os.path.join(db_dir, records_db)\n",
     "records_db_path_rel = os.path.relpath(records_db_path, root_dir)\n",
     "records_tables = list(vp.in_sw.keys())\n",
