--- a/capture_restructurer.ipynb
+++ b/capture_restructurer.ipynb
@@ -33,9 +33,9 @@
     "print(f'Target directory: {captured_frames_path}')\n",
     "\n",
     "def main(origin_root, captured_frames_path):\n",
-    "    routers = {'outer_fence':'192.168.0.170',\n",
-    "           'hallway':'192.168.0.207',\n",
-    "           'garden':'192.168.0.208'}\n",
+    "    routers = {go.config['CCTV_1_NAME']:go.config['CCTV_1_IP'],\n",
+    "           go.config['CCTV_2_NAME']:go.config['CCTV_2_IP'],\n",
+    "           go.config['CCTV_3_NAME']:go.config['CCTV_3_IP']}\n",
     "    routers_inversed = {v:k for k,v in routers.items()}\n",
     "    \n",
     "    origin_main_folders = os.listdir(origin_root)\n",
