--- a/movement_signal.ipynb
+++ b/movement_signal.ipynb
@@ -43,9 +43,9 @@
     "    print(f'{go.datetime_now()} Starting movement signal server at {label}')\n",
     "    \n",
     "    # Old outer_fence value: [(21,21),0.001]\n",
-    "    param_sw = {'outer_fence':[(35,35),0.25],\n",
-    "                'garden':[(35,35),0.25],\n",
-    "                'hallway':[(35,35),0.25]}\n",
+    "    param_sw = {go.config['CCTV_1_NAME']:[(35,35),0.25],\n",
+    "                go.config['CCTV_2_NAME']:[(35,35),0.25],\n",
+    "                go.config['CCTV_3_NAME']:[(35,35),0.25]}\n",
     "    \n",
     "    root_path = os.getcwd()\n",
     "    cache_path = os.path.join(root_path, 'cache')\n",
@@ -68,7 +68,7 @@
     "\n",
     "    # Readings db\n",
     "    db_path = os.path.join(root_path, 'db')\n",
-    "    readings_db = os.path.join(db_path, 'movement_signal.db')\n",
+    "    readings_db = os.path.join(db_path, go.config['MOVEMENT_SIGNAL_DB'])\n",
     "    sqlite = Sqlite_v2()\n",
     "    sqlite.set_table(label)\n",
     "    sqlite.create_connection(readings_db)\n",
