--- a/movement_signal_threshold_updater.ipynb
+++ b/movement_signal_threshold_updater.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "    root_path = os.getcwd()\n",
     "    db_path = os.path.join(root_path, 'db')\n",
-    "    movement_signal_db_path = os.path.join(db_path, 'movement_signal.db')\n",
+    "    movement_signal_db_path = os.path.join(db_path, go.config['MOVEMENT_SIGNAL_DB'])\n",
     "    cache_path = os.path.join(root_path, 'cache')\n",
     "    movements_path = os.path.join(cache_path, 'movements')\n",
     "    thresholds_path = os.path.join(movements_path, 'thresholds')\n",
@@ -101,11 +101,11 @@
     "# import time\n",
     "# import numpy as np\n",
     "\n",
-    "# label = 'hallway'\n",
+    "# label = go.config['CCTV_2_NAME']\n",
     "\n",
     "# root_path = os.getcwd()\n",
     "# db_path = os.path.join(root_path, 'db')\n",
-    "# movement_signal_db_path = os.path.join(db_path, 'movement_signal.db')\n",
+    "# movement_signal_db_path = os.path.join(db_path, go.config['MOVEMENT_SIGNAL_DB'])\n",
     "\n",
     "# # Constants\n",
     "# capture_rate = 1.65 #seconds\n",
