--- a/notifications.ipynb
+++ b/notifications.ipynb
@@ -34,11 +34,10 @@
     "    print(f'{go.datetime_now()} notifications.py -l \"{label}\" Starting notifications server.')\n",
     "    try:\n",
     "        while True:\n",
-    "            TOKEN = '2002016705:AAGcXBOdx_OAj5LSVxu1LAjVO_xIih8bdfA'\n",
-    "            # Chita, ito, ibu\n",
-    "            CHAT_IDS = ['1217210026','1293826547','5580614403']\n",
-    "            # CHAT_IDS = ['@jonathanraditya']\n",
-    "\n",
+    "            TOKEN = go.config['TELEGRAM_TOKEN']\n",
+    "            CHAT_IDS = [go.config['TELEGRAM_CHAT_ID_1'],\n",
+    "                        go.config['TELEGRAM_CHAT_ID_2'],\n",
+    "                        go.config['TELEGRAM_CHAT_ID_3']]\n",
     "\n",
     "            root_path = os.getcwd()\n",
     "            cache_path = os.path.join(root_path, 'cache')\n",
@@ -52,7 +51,7 @@
     "            os.makedirs(deception_path, exist_ok=True)\n",
     "            \n",
     "            db_path = os.path.join(root_path, 'db')\n",
-    "            notifications_db = os.path.join(db_path, 'notifications.db')\n",
+    "            notifications_db = os.path.join(db_path, go.config['NOTIFICATIONS_DB'])\n",
     "            sqlite = Sqlite_v2()\n",
     "            sqlite.set_table('notifications')\n",
     "            sqlite.create_connection(notifications_db)\n",
