--- a/proof.ipynb
+++ b/proof.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "    captured_frames_path = os.path.join(cache_path, 'captured_frames')\n",
     "\n",
-    "    cctv_proof_path = 'G:\\\\My Drive\\\\cctv_proof'\n",
+    "    cctv_proof_path = go.config['CCTV_PROOF_PATH']\n",
     "    os.makedirs(cctv_proof_path, exist_ok=True)\n",
     "\n",
     "    try:\n",
@@ -106,12 +106,12 @@
     "\n",
     "# captured_frames_path = os.path.join(cache_path, 'captured_frames')\n",
     "\n",
-    "# cctv_proof_path = 'G:\\\\My Drive\\\\cctv_proof'\n",
+    "# cctv_proof_path = go.config['CCTV_PROOF_PATH']\n",
     "# os.makedirs(cctv_proof_path, exist_ok=True)\n",
     "\n",
     "# sqlite = Sqlite_v2()\n",
     "# sqlite.set_table('notifications')\n",
-    "# sqlite.create_connection('./db/notifications.db')\n",
+    "# sqlite.create_connection('./db/'+go.config['NOTIFICATIONS_DB'])\n",
     "\n",
     "# df = pd.read_sql(f'select * from notifications', sqlite.conn)\n",
     "\n",
